--- a/src/app/comp/workflow-ui/canvas/canvas.component.scss
+++ b/src/app/comp/workflow-ui/canvas/canvas.component.scss
@@ -1,7 +1,7 @@
 .workflow-container {
     background-color: #efefef;
-    height: 100%;
-    width: 100%;
+    height: 2200px;
+    width: 2200px;
 }
 
 svg.workflow {
@@ -40,7 +40,6 @@ svg.workflow {
             rect.proc-box {
                 stroke: red;
                 stroke-width: 2;
-                fill: none;
             }
         }
     }
