--- a/src/app/comp/workflow-ui/workflow-ui.component.html
+++ b/src/app/comp/workflow-ui/workflow-ui.component.html
@@ -1,3 +1,8 @@
+@if(searchResult) {
+<div class="position-absolute">
+    <app-node-inspector [searchResult]="searchResult"></app-node-inspector>
+</div>
+}
 @if (loaded && workflow && model && references && startpoints && versions && workflowUuid) {
 <article class="container-fluid">
     <section>
