--- a/src/app/comp/workflow-ui/canvas/canvas.component.html
+++ b/src/app/comp/workflow-ui/canvas/canvas.component.html
@@ -30,9 +30,7 @@
                 @if (node.image != '') {
                 <image [attr.width]="node.imagewidth" [attr.height]="node.imageheight"
                     [attr.x]="node.x + (node.width / 2) - (node.imagewidth / 2)" [attr.y]="node.y + 2"
-                    [attr.xlink:href]="'assets/syshub/' + node.image + '.png'"
-                    (mousemove)="onMouseOverElement(node.uuid, $event)" (mouseleave)="onMouseLeaveElement()"
-                    (click)="hovernodePinned = !hovernodePinned; onMouseLeaveElement()" />
+                    [attr.xlink:href]="'assets/syshub/' + node.image + '.png'" />
                 }
                 @if(node.isAnnotation) {
                 <rect [attr.width]="node.width" [attr.height]="node.height" [attr.x]="node.x" [attr.y]="node.y" rx="1"
@@ -62,7 +60,8 @@
                 </text>
                 }
                 <rect [attr.width]="node.width" [attr.height]="node.height" [attr.x]="node.x" [attr.y]="node.y" rx="5"
-                    ry="5" [ngClass]="{'proc-box': true, 'resize-to-parent': true, 'has-match': node.hasMatch}">
+                    ry="5" [ngClass]="{'proc-box': true, 'resize-to-parent': true, 'has-match': node.hasMatch}"
+                    (click)="selectNode(node)" (mouseover)="hoverNode(node)" (mouseout)="leaveNode(node)">
                 </rect>
             </g>
             }
@@ -89,8 +88,3 @@
         </svg>
     </div>
 </div>
-
-<app-workflow-ui-tooltip [node]="hovernode" [searchResult]="searchResult" [tooltipLocation]="tooltipLocation"
-    [tooltipLeft]="tooltipLeft" [tooltipPinned]="hovernodePinned"
-    (onUnpinTooltip)="hovernodePinned = !hovernodePinned; onMouseLeaveElement()">
-</app-workflow-ui-tooltip>
