wip workflow ui

--- a/src/app/comp/node-inspector/node-inspector.component.html
+++ b/src/app/comp/node-inspector/node-inspector.component.html
@@ -9,7 +9,7 @@
         <button type="button" class="btn btn-sm px-2" cdkDragHandle>
             <i class="bi bi-arrows-move"></i>
         </button>
-        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id)">
+        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id, true)">
             <i class="bi bi-x-lg"></i>
         </button>
     </app-node-inspector-config-node>
@@ -20,7 +20,7 @@
         <button type="button" class="btn btn-sm px-2" cdkDragHandle>
             <i class="bi bi-arrows-move"></i>
         </button>
-        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id)">
+        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id, true)">
             <i class="bi bi-x-lg"></i>
         </button>
     </app-node-inspector-jobtypes-node>
@@ -31,7 +31,7 @@
         <button type="button" class="btn btn-sm px-2" cdkDragHandle>
             <i class="bi bi-arrows-move"></i>
         </button>
-        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id)">
+        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id, true)">
             <i class="bi bi-x-lg"></i>
         </button>
     </app-node-inspector-pset-node>
@@ -42,7 +42,7 @@
         <button type="button" class="btn btn-sm px-2" cdkDragHandle>
             <i class="bi bi-arrows-move"></i>
         </button>
-        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id)">
+        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id, true)">
             <i class="bi bi-x-lg"></i>
         </button>
     </app-node-inspector-workflows-node>
@@ -53,7 +53,7 @@
         <button type="button" class="btn btn-sm px-2" cdkDragHandle>
             <i class="bi bi-arrows-move"></i>
         </button>
-        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id)">
+        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id, true)">
             <i class="bi bi-x-lg"></i>
         </button>
     </app-node-inspector-certstore-node>
@@ -64,7 +64,7 @@
         <button type="button" class="btn btn-sm px-2" cdkDragHandle>
             <i class="bi bi-arrows-move"></i>
         </button>
-        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id)">
+        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id, true)">
             <i class="bi bi-x-lg"></i>
         </button>
     </app-node-inspector-ippdevice-node>
@@ -75,7 +75,7 @@
         <button type="button" class="btn btn-sm px-2" cdkDragHandle>
             <i class="bi bi-arrows-move"></i>
         </button>
-        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id)">
+        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id, true)">
             <i class="bi bi-x-lg"></i>
         </button>
     </app-node-inspector-user-node>
@@ -88,7 +88,7 @@
         <button type="button" class="btn btn-sm px-2" cdkDragHandle>
             <i class="bi bi-arrows-move"></i>
         </button>
-        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id)">
+        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id, true)">
             <i class="bi bi-x-lg"></i>
         </button>
     </app-node-inspector-workflow-process-node>
