--- a/src/app/comp/workflow-ui/canvas/canvas.component.scss
+++ b/src/app/comp/workflow-ui/canvas/canvas.component.scss
@@ -1,3 +1,5 @@
+$primary: #E12327;
+
 .workflow-container {
     background-color: #efefef;
     height: 2200px;
@@ -38,7 +40,7 @@ svg.workflow {
 
         &:hover {
             rect.proc-box {
-                stroke: red;
+                stroke: $primary;
                 stroke-width: 2;
             }
         }
@@ -52,7 +54,7 @@ svg.workflow {
 
             &:hover {
                 stroke-width: 3;
-                stroke: red;
+                stroke: $primary;
             }
         }
     }
@@ -64,6 +66,10 @@ svg.workflow {
     text.proc-description {
         font-size: 8pt;
         font-style: italic;
+
+        &.connector-description.error {
+            fill: $primary;
+        }
     }
 
     text.proc-title,
