wip workflow ui

--- a/src/app/comp/node-inspector/node-inspector.component.html
+++ b/src/app/comp/node-inspector/node-inspector.component.html
@@ -82,6 +82,17 @@
     }
     @case ('SvgNode') {
     @switch($any(node.nodeitem).modeldata.category) {
+    @case ('decision') {
+    <app-node-inspector-workflow-decision-node [nodeItem]="$any(node.nodeitem)" [searchResult]="searchResult"
+        (onChangeColor)="node.color = (node.color == colorpalette.length - 1 ? 0 : node.color + 1)">
+        <button type="button" class="btn btn-sm px-2" cdkDragHandle>
+            <i class="bi bi-arrows-move"></i>
+        </button>
+        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id, true)">
+            <i class="bi bi-x-lg"></i>
+        </button>
+    </app-node-inspector-workflow-decision-node>
+    }
     @case ('process') {
     <app-node-inspector-workflow-process-node [nodeItem]="$any(node.nodeitem)" [searchResult]="searchResult"
         (onChangeColor)="node.color = (node.color == colorpalette.length - 1 ? 0 : node.color + 1)">
