--- a/src/app/comp/node-inspector/wf-process-node/wf-process-node.component.html
+++ b/src/app/comp/node-inspector/wf-process-node/wf-process-node.component.html
@@ -19,9 +19,21 @@
     <p class="mb-0">
         <strong>
             <i class="bi bi-arrow-repeat me-1"></i>
-            {{ l10nphrase.workflowUi.process.loop }}:
+            {{ l10nphrase.workflowUi.shared.loop }}:
         </strong>
         <span [innerHTML]="$any(nodeItem.modeldata).loopName | highlight: searchResult.search.phrase"></span>
+    </p>
+    }
+    @if (parameterset) {
+    <p class="mb-0">
+        <strong>
+            <i class="bi bi-p-square-fill me-1"></i>
+            {{ l10nphrase.workflowUi.shared.parametersetRef }}:
+        </strong>
+        <span [innerHTML]="$any(nodeItem.modeldata).parameterSetPath | highlight: searchResult.search.phrase"></span>
+        <button type="button" class="btn btn-sm ms-1" (click)="selectNode(parameterset, $event)">
+            <i class="bi bi-window-stack fs-7"></i>
+        </button>
     </p>
     }
 </div>
