first successfull deployment

--- a/src/app/comp/workflow-ui/canvas/canvas.component.html
+++ b/src/app/comp/workflow-ui/canvas/canvas.component.html
@@ -82,7 +82,8 @@
             </g>
             <g class="connector-breakpoints">
                 @for (item of breakpoints; track $index) {
-                <image [attr.x]="item.x" [attr.y]="item.y" width="18" height="18" href="/assets/syshub/breakpoint.svg">
+                <image [attr.x]="item.x" [attr.y]="item.y" width="18" height="18"
+                    href="/findr/assets/syshub/breakpoint.svg">
                 </image>
                 }
             </g>
