--- a/src/app/comp/node-inspector/wf-celement-node/wf-celement-node.component.html
+++ b/src/app/comp/node-inspector/wf-celement-node/wf-celement-node.component.html
@@ -23,7 +23,7 @@
             <i class="bi bi-journal-album me-1"></i>
             {{ l10nphrase.workflowUi.celement.instanceName }}:
         </strong>
-        <span [innerHTML]="$any(nodeItem.modeldata).instanceName | highlight: searchResult.search.phrase"></span>
+        <code [innerHTML]="$any(nodeItem.modeldata).instanceName | highlight: searchResult.search.phrase"></code>
     </p>
     }
     @if ($any(nodeItem.modeldata).agent != '') {
@@ -32,7 +32,7 @@
             <i class="bi bi-router me-1"></i>
             {{ l10nphrase.workflowUi.shared.agent }}:
         </strong>
-        <span [innerHTML]="$any(nodeItem.modeldata).agent | highlight: searchResult.search.phrase"></span>
+        <code [innerHTML]="$any(nodeItem.modeldata).agent | highlight: searchResult.search.phrase"></code>
     </p>
     }
 </div>
