--- a/src/app/comp/home/home.component.html
+++ b/src/app/comp/home/home.component.html
@@ -127,7 +127,8 @@
                             [ngClass]="{ 'bi': true, 'bi-caret-down': !showMoreFilter, 'bi-caret-up': showMoreFilter }"></i>
                     </p>
                 </div>
-                <div class="card-body pt-0" *ngIf="showMoreFilter">
+                @if (showMoreFilter) {
+                <div class="card-body pt-0">
                     <h4 class="card-title">{{ l10nphrase.home.moreFilter }}</h4>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
@@ -171,6 +172,7 @@
                         </li>
                     </ul>
                 </div>
+                }
             </div>
         </form>
     </section>
