--- a/src/app/comp/main/navbar/navbar.component.html
+++ b/src/app/comp/main/navbar/navbar.component.html
@@ -13,18 +13,24 @@
                         [routerLink]="['/']">{{
                         l10nphrase.navbar.homeLink }}</a>
                 </li>
-                <li class="nav-item" *ngIf="url === '/about'">
+                @if (url === '/about') {
+                <li class="nav-item">
                     <a [ngClass]="{'nav-link': true, 'active': true}" [routerLink]="['/about']">{{
                         l10nphrase.navbar.aboutLink }}</a>
                 </li>
-                <li class="nav-item" *ngIf="url === '/help'">
+                }
+                @if (url === '/help') {
+                <li class="nav-item">
                     <a [ngClass]="{'nav-link': true, 'active': true}" [routerLink]="['/help']">{{
                         l10nphrase.navbar.helpLink }}</a>
                 </li>
-                <li class="nav-item" *ngIf="url.startsWith('/result')">
+                }
+                @if (url.startsWith('/result')) {
+                <li class="nav-item">
                     <a [ngClass]="{'nav-link': true, 'active': true}" [routerLink]="url">{{
                         l10nphrase.navbar.resultLink }}</a>
                 </li>
+                }
             </ul>
         </div>
         <div class="d-flex align-items-center">
@@ -192,18 +198,22 @@
                             {{ l10nphrase.navbar.aboutLink }}
                         </a>
                     </li>
+                    @if (promolink) {
                     <li>
-                        <a class="dropdown-item" target="_blank" [href]="promolink" *ngIf="promolink">
+                        <a class="dropdown-item" target="_blank" [href]="promolink">
                             <i class="bi bi-git me-2"></i>
                             {{ l10nphrase.navbar.promoLink }}
                         </a>
                     </li>
+                    }
+                    @if (webclientlink) {
                     <li>
-                        <a class="dropdown-item" target="_blank" [href]="webclientlink" *ngIf="webclientlink">
+                        <a class="dropdown-item" target="_blank" [href]="webclientlink">
                             <i class="bi bi-browser-edge me-2"></i>
                             {{ l10nphrase.navbar.webclientLink }}
                         </a>
                     </li>
+                    }
                     <li>
                         <hr class="dropdown-divider">
                     </li>
