hide category filter as not yet implemented

--- a/src/app/comp/home/home.component.html
+++ b/src/app/comp/home/home.component.html
@@ -131,7 +131,7 @@
                 <div class="card-body pt-0">
                     <h4 class="card-title">{{ l10nphrase.home.moreFilter }}</h4>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">
+                        <!-- <li class="list-group-item">
                             <div class="d-flex align-items-center">
                                 <span class="me-3">{{ l10nphrase.search.filter.categoryFilter }}:</span>
                                 <select class="form-select" formControlName="categoryFilter"
@@ -144,7 +144,7 @@
                                     }
                                 </select>
                             </div>
-                        </li>
+                        </li> -->
                         <li class="list-group-item">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" formControlName="excludeBComments"
