--- a/src/app/comp/help/help.component.html
+++ b/src/app/comp/help/help.component.html
@@ -11,7 +11,7 @@
     <section>
         <h2>Allgemeine Benutzungshinweise</h2>
         <p>
-            <img src="/findr/assets/help/sec1-navbar-left.png"
+            <img [src]="theme == 'dark' ? '/findr/assets/help/sec1-navbar-left.png' : '/findr/assets/help/sec1-navbar-left-light.png'"
                 alt="Screenshot der Navigationsleiste links oben, mit den Verknüpfungen zur Startseite und den Statistiken"
                 class="float-end ms-3 border shadow-sm">
             Im oberen Bereich der Webseite befindet sich die Navigationsleiste. Dort finden sich auf der linke Seite
@@ -19,8 +19,9 @@
             gestartet werden.
         </p>
         <br clear="all" />
+        <br />
         <p>
-            <img src="/findr/assets/help/sec1-navbar-right.png"
+            <img [src]="theme == 'dark' ? '/findr/assets/help/sec1-navbar-right.png' : '/findr/assets/help/sec1-navbar-right-light.png'"
                 alt="Screenshot der Navigationsleiste rechts oben, mit der Suchleiste und dem Dropdown für weitere Optionen"
                 class="float-end ms-3 border shadow-sm">
             Auf der rechten Seite der Navigationsleiste befinden sich zum einen die Suchleiste mit einem
@@ -77,15 +78,16 @@
     <section>
         <h2>General Usage Tips</h2>
         <p>
-            <img src="/findr/assets/help/sec1-navbar-left.png"
+            <img [src]="theme == 'dark' ? '/findr/assets/help/sec1-navbar-left.png' : '/findr/assets/help/sec1-navbar-left-light.png'"
                 alt="Screenshot of the top left navigation bar, with links to the homepage and statistics"
                 class="float-end ms-3 border shadow-sm">
             At the top of the webpage is the navigation bar. On the left side, you'll find links to the homepage and a
             statistics page. The search function can also be initiated from the homepage.
         </p>
         <br clear="all" />
+        <br />
         <p>
-            <img src="/findr/assets/help/sec1-navbar-right.png"
+            <img [src]="theme == 'dark' ? '/findr/assets/help/sec1-navbar-right-en.png' : '/findr/assets/help/sec1-navbar-right-en-light.png'"
                 alt="Screenshot of the top right navigation bar, with the search bar and dropdown for additional options"
                 class="float-end ms-3 border shadow-sm">
             On the right side of the navigation bar are the search bar with an options dropdown and the button to start
