allow html content

--- a/src/app/svc/toasts/toasts.component.html
+++ b/src/app/svc/toasts/toasts.component.html
@@ -1,6 +1,11 @@
 @for (toast of toasts; track $index) {
 <ngb-toast [class]="toast.cssClasses" [autohide]="toast.autohide ?? true" [delay]="toast.delay || 5000"
     (hidden)="removeAt($index)">
+    @if (toast.isHtml === true) {
+    <span [innerHtml]="toast.message"></span>
+    }
+    @else {
     {{toast.message}}
+    }
 </ngb-toast>
 }
